All project mobile spacing

--- a/calpolyracing.html
+++ b/calpolyracing.html
@@ -146,13 +146,13 @@
     </div>
 
 
-    <div class="border mb-5">
+    <div class="border">
     </div>
     <!--Skills/Tools Section End-->
 
 
     <!--2 Col Content Section Start-->
-    <div class="row pt-4 pb-5 align-items-center">
+    <div class="row pt-full align-items-center">
 
       <div class="col-12 col-sm-6">
 
@@ -163,7 +163,7 @@
       </div>
 
 
-      <div class="col-12 col-sm-6 ps-5 pe-5 pt-5 pt-sm-0">
+      <div class="col-12 col-sm-6 padded-left-text pt-full pt-sm-0">
 
         <p class="body-3">When I joined Cal Poly Racing, the organization was rapidly
           gaining a presence on campus. A brand refresh was necessary to present the team
@@ -179,15 +179,50 @@
     <!--2 Col Content Section End-->
 
 
+    <!--Animation Section Start-->
+    <div class="col-12 pt-full">
+
+      <img src="Images/cpr/website_2022_cpr_website_home.png"
+        alt="A laptop showing different pages of the Cal Poly Racing website."
+        class="img-fluid" id="animated-image-1">
+
+    </div>
+    <!--Animation Section End-->
+
+
+    <!--Script Section Start-->
+    <script type="text/javascript">
+      var state = 1;
+      var image1 = document.getElementById("animated-image-1")
+
+      function changeState() {
+        if (state % 5 === 0) {
+          image1.src = "Images/cpr/website_2022_cpr_website_home.png"
+        } else if (state % 5 === 1) {
+          image1.src = "Images/cpr/website_2022_cpr_website_baja.png"
+        } else if (state % 5 === 2) {
+          image1.src = "Images/cpr/website_2022_cpr_website_formula.png"
+        } else if (state % 5 === 3) {
+          image1.src = "Images/cpr/website_2022_cpr_website_electric.png"
+        } else if (state % 5 === 4) {
+          image1.src = "Images/cpr/website_2022_cpr_website_partners.png"
+        }
+        state += 1
+      }
+      setInterval(changeState, [1500]);
+    </script>
+    <!--Script Section End-->
+
+
     <!--Text Section Start-->
-    <div class="py-3 py-sm-5 mx-auto" style="max-width: 65%;">
+    <div class="pt-full padded-text mx-auto">
 
       <p class="body-3">Cal Poly Racing’s website appeals to prospective members and
         partners who want to learn more about the team. I worked with 3 other
-        designers—<a class="inline-link-1"
+        designers—<a class="inline-link-2"
           href="https://spencerwhitedesign.myportfolio.com/" target="_blank">Spencer
-          White</a>, <a class="inline-link-1" href="https://www.alinachiu.com/"
-          target="_blank">Alina Chiu</a>, and <a class="inline-link-1"
+          White</a>, <a class="inline-link-2" href="https://www.alinachiu.com/"
+          target="_blank">Alina Chiu</a>, and <a class="inline-link-2"
           href="https://runarix.wixsite.com/runarschmidtdesign" target="_blank">Runar
           Schmidt</a>—to create the site. As
         Creative Director, I organized project tasks and timelines, established a branded
@@ -199,7 +234,7 @@
 
 
     <!--Image Section Start-->
-    <div class="pt-5 pb-3">
+    <div class="pt-full">
 
       <img src="Images/cpr/website_2022_cpr_partsHighlight-01.png"
         alt="Illustrations of a brake rotor, a suspension rocker, a gear, and a gearbox."
@@ -210,7 +245,7 @@
 
 
     <!--2 Col Content Section Start-->
-    <div class="row pt-4 pb-5 align-items-center">
+    <div class="row pt-full align-items-center">
 
       <div class="col-12 col-sm-6">
 
@@ -221,7 +256,7 @@
       </div>
 
 
-      <div class="col-12 col-sm-6 ps-5 pe-5 pt-5 pt-sm-0">
+      <div class="col-12 col-sm-6 padded-left-text pt-full pt-sm-0">
 
         <p class="body-3">Team apparel represents Formula SAE and Baja SAE, but just
           putting pictures of the cars on a shirt is an extremely common look among
@@ -237,7 +272,7 @@
 
 
     <!--Image Section Start-->
-    <div class="pt-2 pb-5">
+    <div class="pt-full">
 
       <img src="Images/cpr/website_2022_cpr_partsHighlight-02.png"
         alt="Illustrations of a CVT, a fuel intake, gas and break pedals, and a brake rotor."
@@ -248,7 +283,7 @@
 
 
     <!--Image Section Start-->
-    <div class="pt-2 pb-3">
+    <div class="pt-full">
 
       <img src="Images/cpr/website_2022_cpr_liveryPhoto.jpg"
         alt="Two men roll the Cal Poly Racing Baja car on a dirt plain. There are pop-up tents, trailers, and pick-up trucks in the background."
@@ -259,7 +294,7 @@
 
 
     <!--Text Section Start-->
-    <div class="py-3 py-sm-5 mx-auto" style="max-width: 65%;">
+    <div class="pt-full padded-text mx-auto">
 
       <p class="body-3">For the 2019 season I worked with the Baja team to design livery
         for the side body panels and front and back of the firewall.
@@ -270,7 +305,7 @@
 
 
     <!--Image Section Start-->
-    <div class="pt-2 pb-3">
+    <div class="pt-full">
 
       <img src="Images/cpr/website_2022_cpr_bajaLiveryFlat.jpg"
         alt="The the firewall and side panels covered in an angular geometric pattern and sponsor logos."
@@ -281,7 +316,7 @@
 
 
     <!--2 Col Content Section Start-->
-    <div class="row pt-5 pb-5 align-items-center">
+    <div class="row pt-full align-items-center">
 
       <div class="col-12 col-sm-6">
 
@@ -291,7 +326,7 @@
       </div>
 
 
-      <div class="col-12 col-sm-6 ps-5 pe-5 pt-5 pt-sm-0">
+      <div class="col-12 col-sm-6 padded-left-text pt-full pt-sm-0">
 
         <p class="body-3">The graphics reflect the dynamic and rugged nature of
           off-roading while still adhering to the parameters set by the team. The design
@@ -306,7 +341,7 @@
 
 
     <!--2 Col Content Section Start-->
-    <div class="row py-4 align-items-center">
+    <div class="row pt-full align-items-center">
 
       <div class="col-12 col-sm-6">
 
@@ -317,7 +352,7 @@
       </div>
 
 
-      <div class="col-12 col-sm-6  pt-5 pt-sm-0">
+      <div class="col-12 col-sm-6 pt-4 pt-sm-0">
 
         <img src="Images/cpr/website_2022_cpr_socialMedia.png"
           alt="An iPhone showing an Instagram post for Cal Poly Racing’s 2019 Unveiling Ceremony."
@@ -331,9 +366,9 @@
 
 
     <!--2 Col Content Section Start-->
-    <div class="row pt-5 pb-5 align-items-center">
+    <div class="row pt-full align-items-center">
 
-      <div class="col-12 col-sm-6 ps-5 pe-5 pt-5 pt-sm-0">
+      <div class="col-12 col-sm-6 pe-5">
 
         <p class="body-3">Smaller pieces that help further our credibility as a
           professional organization are just as important to the team’s presence on campus
@@ -342,7 +377,7 @@
       </div>
 
 
-      <div class="col-12 col-sm-6">
+      <div class="col-12 col-sm-6 pt-5 pt-sm-0">
 
         <img src="Images/cpr/website_2022_cpr_thankYou.png"
           alt="A black card with the phrase ‘Thank you!’ in bold letters. Each letter in the word ‘thank’ is filled with a different photo of the cars"
@@ -356,7 +391,7 @@
 
 
     <!--Image Section Start-->
-    <div class="pt-2 pb-3">
+    <div class="pt-full">
 
       <img src="Images/cpr/website_2022_cpr_lineDrawing.png"
         alt="An illustration of the three Cal Poly Racing cars drawn with a single line."
@@ -371,7 +406,7 @@
     </div>
 
 
-    <div class="py-5 mt-3" color="#ffffff">
+    <div class="pt-full" color="#ffffff">
 
       <h2 class="header-2 text-center pb-4">
         Looking for more?
