--- a/dew.html
+++ b/dew.html
@@ -142,13 +142,13 @@
     </div>
 
 
-    <div class="border mb-5">
+    <div class="border">
     </div>
     <!--Skills/Tools Section End-->
 
 
     <!--2 Col Content Section Start-->
-    <div class="row py-4 align-items-center">
+    <div class="row pt-full align-items-center">
 
       <div class="col-12 col-sm-6">
 
@@ -159,7 +159,7 @@
       </div>
 
 
-      <div class="col-12 col-sm-6 ps-5 pe-5 pt-5 pt-sm-0">
+      <div class="col-12 col-sm-6 padded-left-text pt-full pt-sm-0">
 
         <p class="body-3">Dew puts their mission front and center: bringing together the
           best food, wine, art, and entertainment that the Central Coast has to offer.</p>
@@ -172,7 +172,7 @@
 
 
     <!--Animation Section Start-->
-    <div class="col-12 py-5">
+    <div class="col-12 pt-full">
 
       <img src="Images/dew/website_2022_dew_logoMockup-01.png" alt="The Dew logo"
         class="img-fluid" id="animated-image-1">
@@ -200,7 +200,7 @@
 
 
     <!--Text Section Start-->
-    <div class="py-3 py-sm-5 mx-auto" style="max-width: 60%;">
+    <div class="pt-full padded-text mx-auto">
 
       <p class="body-3">The new logo visualizes Dew’s commitment to freshness and all
         things local by combining the forms of a leaf, a dewdrop, and a coastline.</p>
@@ -210,7 +210,7 @@
 
 
     <!--Image Section Start-->
-    <div class="py-4">
+    <div class="pt-full">
 
       <img src="Images/dew/website_2022_dew_businessSystemMockup.png"
         alt="The front and back of an envelope, two business cards, a notebook, and a formal letter with Dew branding and company information on a wooden tabletop."
@@ -221,7 +221,7 @@
 
 
     <!--2 Col Content Section Start-->
-    <div class="row py-4 align-items-center">
+    <div class="row pt-full align-items-center">
 
       <div class="col-12 col-sm-6 pe-5">
 
@@ -232,7 +232,7 @@
       </div>
 
 
-      <div class="col-12 col-sm-6  pt-5 pt-sm-0">
+      <div class="col-12 col-sm-6 pt-5 pt-sm-0">
 
         <img src="Images/dew/website_2022_dew_shirtMockup.png"
           alt="A folded white t-shirt decorated with the phrase “Central Coast Culture” and a vine graphic."
@@ -246,7 +246,7 @@
 
 
     <!--2 Col Content Section Start-->
-    <div class="row py-4 align-items-center">
+    <div class="row pt-full align-items-center">
 
       <div class="col-12 col-sm-6">
 
@@ -257,7 +257,7 @@
       </div>
 
 
-      <div class="col-12 col-sm-6  pt-5 pt-sm-0">
+      <div class="col-12 col-sm-6 pt-4 pt-sm-0">
 
         <img src="Images/dew/website_2022_dew_standardsManualMockup.png"
           alt="A spiral-bound book titled “Dew Standards Manual” on a wooden table."
@@ -271,7 +271,7 @@
 
 
     <!--Image Section Start-->
-    <div class="py-4">
+    <div class="pt-partial">
 
       <img src="Images/dew/website_2022_dew_flyerMockup.png"
         alt="Two flyers for events at Dew: a gallery showing and a wine tasting. Each flyer contains information and images relevant to the event."
@@ -281,7 +281,7 @@
     <!--Image Section End-->
 
     <!--Text Section Start-->
-    <div class="py-3 py-sm-5 mx-auto" style="max-width: 65%;">
+    <div class="pt-full padded-text mx-auto">
 
       <p class="body-3">Events held in the restaurant and gallery space celebrate the
         products of the Central Coast and the talents of the people who live there.</p>
@@ -291,7 +291,7 @@
 
 
     <!--Image Section Start-->
-    <div class="py-4">
+    <div class="pt-full">
 
       <img src="Images/dew/website_2022_dew_signMockup.png"
         alt="A circular sign containing the Dew logo mounted on the side of a building."
@@ -306,7 +306,7 @@
     </div>
 
 
-    <div class="py-5 mt-3" color="#ffffff">
+    <div class="pt-full" color="#ffffff">
 
       <h2 class="header-2 text-center pb-4">
         Looking for more?
