--- a/grove.html
+++ b/grove.html
@@ -189,7 +189,7 @@
 
 
     <!--2 Col Content Section Start-->
-    <div class="row pt-4 pb-5 align-items-center">
+    <div class="row pt-full align-items-center">
 
       <div class="col-12 col-sm-6">
 
@@ -200,7 +200,7 @@
       </div>
 
 
-      <div class="col-12 col-sm-6 ps-5 pe-5 pt-5 pt-sm-0">
+      <div class="col-12 col-sm-6 padded-left-text pt-full pt-sm-0">
 
         <p class="body-3">Grove’s brand balances the technology aspect of a software
           startup with the warm, inviting nature of mental health professionals in a fun
@@ -214,7 +214,7 @@
 
 
     <!--Image Section Start-->
-    <div class="pt-5 pb-3">
+    <div class="pt-full">
 
       <img src="Images/grove/website_2022_grove_logoMockup-01.png" alt="The Grove logo."
         class="img-fluid" style="width: 100%;">
@@ -224,7 +224,7 @@
 
 
     <!--Text Section Start-->
-    <div class="py-3 py-sm-5 mx-auto" style="max-width: 65%;">
+    <div class="pt-full mx-auto padded-text">
 
       <p class="body-3">The sentiment of community, support, and success that accompanies
         the word “Grove” makes it the perfect foundation for a welcoming and compassionate
@@ -235,7 +235,7 @@
 
 
     <!--2 Col Content Section Start-->
-    <div class="row py-4 align-items-center">
+    <div class="row pt-full align-items-center">
 
       <div class="col-12 col-sm-6">
 
@@ -246,7 +246,7 @@
       </div>
 
 
-      <div class="col-12 col-sm-6  pt-5 pt-sm-0">
+      <div class="col-12 col-sm-6 pt-4 pt-sm-0">
 
         <img src="Images/grove/website_2022_grove_billboard.png"
           alt="A bus stop advertisement the reads “The best mental health solutions come from working together”."
@@ -260,7 +260,7 @@
 
 
     <!--2 Col Content Section Start-->
-    <div class="row pt-5 pb-5 align-items-center">
+    <div class="row pt-full align-items-center">
 
       <div class="col-12 col-sm-6">
 
@@ -271,7 +271,7 @@
       </div>
 
 
-      <div class="col-12 col-sm-6 ps-5 pe-5 pt-5 pt-sm-0">
+      <div class="col-12 col-sm-6 padded-left-text pt-full pt-sm-0">
 
         <p class="body-3">Truly connected mental healthcare means that everyone has access
           to the tools they need to do their jobs. For Grove, accessibility was a
@@ -289,7 +289,7 @@
 
 
     <!--Animation Section Start-->
-    <div class="col-12 py-5">
+    <div class="col-12 pt-full">
 
       <img src="Images/grove/website_2022_grove_website_home.png"
         alt="An iMac computer showing different pages of the Grove website."
@@ -322,7 +322,7 @@
 
 
     <!--Text Section Start-->
-    <div class="py-3 py-sm-5 mx-auto" style="max-width: 65%;">
+    <div class="pt-full padded-text mx-auto">
 
       <p class="body-3">A combination of imagery, including patterns, illustration,
         photography, and collage, visually expresses Grove’s mission to foster
@@ -333,7 +333,7 @@
 
 
     <!--2 Col Content Section Start-->
-    <div class="row py-4 align-items-center">
+    <div class="row pt-full align-items-center">
 
       <div class="col-12 col-sm-6">
 
@@ -344,7 +344,7 @@
       </div>
 
 
-      <div class="col-12 col-sm-6  pt-5 pt-sm-0">
+      <div class="col-12 col-sm-6  pt-4 pt-sm-0">
 
         <img src="Images/grove/website_2022_grove_icons-01.png"
           alt="A set of 20 icons arranged in a five by four rectangle against a yellow background with wavy lines."
@@ -355,7 +355,7 @@
 
 
       <!--Image Section Start-->
-      <div class="pt-4 pb-3">
+      <div class="pt-partial">
 
         <img src="Images/grove/website_2022_grove_pitchDeck.png"
           alt="A slide from a pitch deck showcasing the Grove platform and its benefits. Six more slides are arranged in the background, each showing different aspects of the business."
@@ -366,22 +366,26 @@
 
 
       <!--2 Col Content Section Start-->
-      <div class="row pt-3 pb-4 align-items-center">
+      <div class="pt-partial">
 
-        <div class="col-12 col-sm-6">
+        <div class="row">
 
-          <img src="Images/grove/website_2022_grove_waterBottle.png"
-            alt="A woman in a striped shirt holding a laptop and a water bottle with the Grove logo."
-            class="img-fluid">
+          <div class="col-12 col-sm-6">
 
-        </div>
+            <img src="Images/grove/website_2022_grove_waterBottle.png"
+              alt="A woman in a striped shirt holding a laptop and a water bottle with the Grove logo."
+              class="img-fluid">
+
+          </div>
 
 
-        <div class="col-12 col-sm-6 pt-5 pt-sm-0">
+          <div class="col-12 col-sm-6 pt-4 pt-sm-0">
 
-          <img src="Images/grove/website_2022_grove_sweatshirt.png"
-            alt="A smiling man in a grey sweatshirt with the phrase “Growing mental health together” and three Grove symbols across the front."
-            class="img-fluid">
+            <img src="Images/grove/website_2022_grove_sweatshirt.png"
+              alt="A smiling man in a grey sweatshirt with the phrase “Growing mental health together” and three Grove symbols across the front."
+              class="img-fluid">
+
+          </div>
 
         </div>
         <!--2 Col Content Section End-->
@@ -392,7 +396,7 @@
         </div>
 
 
-        <div class="py-5 mt-3" color="#ffffff">
+        <div class="pt-full" color="#ffffff">
 
           <h2 class="header-2 text-center pb-4">
             Looking for more?
