--- a/lacroix.html
+++ b/lacroix.html
@@ -143,13 +143,13 @@
     </div>
 
 
-    <div class="border mb-5">
+    <div class="border">
     </div>
     <!--Skills/Tools Section End-->
 
 
     <!--2 Col Content Section Start-->
-    <div class="row py-4 align-items-center">
+    <div class="row pt-full align-items-center">
 
       <div class="col-12 col-sm-6">
 
@@ -160,7 +160,7 @@
       </div>
 
 
-      <div class="col-12 col-sm-6 ps-5 pt-5 pt-sm-0">
+      <div class="col-12 col-sm-6 padded-left-text pt-full pt-sm-0">
 
         <p class="body-3">LaCroix’s bright new packaging breaks through the homogenous
           look of supermarket shelves and fits the modern, upbeat, positive lifestyle that
@@ -174,7 +174,7 @@
 
 
     <!--2 Col Content Section Start-->
-    <div class="row py-4 align-items-center">
+    <div class="row pt-full align-items-center">
 
       <div class="col-12 col-sm-6">
 
@@ -185,7 +185,7 @@
       </div>
 
 
-      <div class="col-12 col-sm-6  pt-5 pt-sm-0">
+      <div class="col-12 col-sm-6 pt-4 pt-sm-0">
 
         <img src="Images/laCroix/website_2022_laCroix_phoneCase.png"
           alt="Two LaCroix phone cases. One is decorated with wavy blue stripes, the other is yellow with a pattern of simple watermelon icons."
@@ -199,7 +199,7 @@
 
 
     <!--Text Section Start-->
-    <div class="py-3 py-sm-5 mx-auto" style="max-width: 65%;">
+    <div class="pt-full mx-auto padded-text">
 
       <p class="body-3">A cheerful and attractive color palette leads to a more
         recognizable brand, while bold graphics appeal to younger buyers.</p>
@@ -209,7 +209,7 @@
 
 
     <!--Animation Section Start-->
-    <div class="col-12 py-5">
+    <div class="col-12 pt-full">
 
       <img src="Images/laCroix/website_2022_laCroix_logoGraphic-01.png"
         alt="The rebranded LaCroix logo between two strips of stylized water."
@@ -238,7 +238,7 @@
 
 
     <!--Text Section Start-->
-    <div class="py-3 py-sm-5 mx-auto" style="max-width: 65%;">
+    <div class="pt-full mx-auto padded-text">
 
       <p class="body-3">The water graphic ties LaCroix to both its product and its
         namesake, Wisconsin’s St. Croix River.</p>
@@ -248,7 +248,7 @@
 
 
     <!--3 Col Content Section Start-->
-    <div class="row py-4 align-items-center">
+    <div class="row pt-full align-items-center">
 
       <div class="col-12 col-sm-4">
 
@@ -282,7 +282,7 @@
 
 
     <!--Image Section Start-->
-    <div class="pb-4 pt-1">
+    <div class="pt-partial">
 
       <img src="Images/laCroix/website_2022_laCroix_case.png"
         alt="A rebranded six-pack case of LaCroix containing peach-pear, lime, and berry flavored drinks."
@@ -293,7 +293,7 @@
 
 
     <!--Text Section Start-->
-    <div class="py-3 py-sm-5 mx-auto" style="max-width: 65%;">
+    <div class="pt-full mx-auto padded-text">
 
       <p class="body-3">The use of glass bottles and an open carrying case allows
         customers to see what they are buying and gives texture to the towering wall of
@@ -304,7 +304,7 @@
 
 
     <!--2 Col Content Section Start-->
-    <div class="row py-4 align-items-center">
+    <div class="row pt-full align-items-center">
 
       <div class="col-12 col-sm-6">
 
@@ -315,7 +315,7 @@
       </div>
 
 
-      <div class="col-12 col-sm-6  pt-5 pt-sm-0">
+      <div class="col-12 col-sm-6 pt-4 pt-sm-0">
 
         <img src="Images/laCroix/website_2022_laCroix_pins.png"
           alt="Four enamel pins of simple fruit icons: a watermelon, an orange, a lemon, and a strawberry."
@@ -333,7 +333,7 @@
     </div>
 
 
-    <div class="py-5 mt-3" color="#ffffff">
+    <div class="pt-full" color="#ffffff">
 
       <h2 class="header-2 text-center pb-4">
         Looking for more?
