--- a/xvela.html
+++ b/xvela.html
@@ -138,13 +138,13 @@
     </div>
 
 
-    <div class="border mb-5">
+    <div class="border">
     </div>
     <!--Skills/Tools Section End-->
 
 
     <!--2 Col Content Section Start-->
-    <div class="row py-4 align-items-center">
+    <div class="row pt-full align-items-center">
 
       <div class="col-12 col-sm-6">
 
@@ -155,7 +155,7 @@
       </div>
 
 
-      <div class="col-12 col-sm-6 ps-5 pt-5 pt-sm-0">
+      <div class="col-12 col-sm-6 padded-left-text pt-full pt-sm-0">
 
         <p class="body-3">XVELA needed custom icons to illustrate complex shipping and
           software processes and add more personality to the brand.</p>
@@ -168,7 +168,7 @@
 
 
     <!--Animation Section Start-->
-    <div class="row py-5">
+    <div class="row pt-full">
 
       <div class="col-3">
 
@@ -234,9 +234,9 @@
 
 
     <!--2 Col Content Section Start-->
-    <div class="row py-4">
+    <div class="row pt-full align-items-center">
 
-      <div class="col-12 col-sm-6 pb-4 pb-sm-0">
+      <div class="col-12 col-sm-6">
 
         <img src="Images/xvela/website_2022_xvela_website.png"
           alt="A computer displaying the icons alongside value propositions on XVELA’s website."
@@ -245,7 +245,7 @@
       </div>
 
 
-      <div class="col-12 col-sm-6">
+      <div class="col-12 col-sm-6 pt-4 pt-sm-0">
 
         <img src="Images/xvela/website_2022_xvela_twitter.png"
           alt="The top half of an iPhone displaying XVELA’s Twitter profile, where the icons are used as the cover image."
@@ -259,7 +259,7 @@
 
 
     <!--Text Section Start-->
-    <div class="py-3 py-sm-5 mx-auto" style="max-width: 65%;">
+    <div class="pt-full padded-text mx-auto">
 
       <p class="body-3">The linear style of the icons evokes style of XVELA’s logotype and
         fits
@@ -270,7 +270,7 @@
 
 
     <!--Image Section Start-->
-    <div class="py-4">
+    <div class="pt-full">
 
       <img src="Images/xvela/website_2022_xvela_iconPhotoPanorama.png"
         alt="Three rows of XVELA icons, connected by lines, over a blue and orange-toned photo of a container ship at sea."
@@ -281,7 +281,7 @@
 
 
     <!--Text Section Start-->
-    <div class="py-3 py-sm-5 mx-auto" style="max-width: 65%;">
+    <div class="pt-full padded-text mx-auto">
 
       <p class="body-3">The icons represent XVELA’s
         values of
@@ -295,7 +295,7 @@
 
 
     <!--Image Section Start-->
-    <div class="py-4">
+    <div class="pt-full">
 
       <img src="Images/xvela/website_2022_xvela_iconGrid.png"
         alt="Icons depicting a badge, a lightbulb, the sun behind a cloud, connected puzzle pieces, a compass, a calendar, a buoy, and a globe on alternating blue and orange backgrounds."
@@ -306,7 +306,7 @@
 
 
     <!--Image Section Start-->
-    <div class="pb-5">
+    <div class="pt-partial">
 
       <img src="Images/xvela/website_2022_xvela_fullIconLibrary.png"
         alt="The full icon library." class="img-fluid">
@@ -320,7 +320,7 @@
     </div>
 
 
-    <div class="py-5 mt-3" color="#ffffff">
+    <div class="pt-full" color="#ffffff">
 
       <h2 class="header-2 text-center pb-4">
         Looking for more?
