FINAL SPACING UPDATE
YEAH-Fletcher

--- a/about.html
+++ b/about.html
@@ -135,31 +135,35 @@
       <!--Resume Content Section Start-->
       <div class="col-12 col-sm-5 py-3">
 
-        <h3 class="header-3 pb-3">
-          Education
-        </h3>
+        <div class="pe-0 pe-md-4">
+
+          <h3 class="header-3 pb-3">
+            Education
+          </h3>
 
 
-        <h4 class="header-4 pb-2">
-          B.F.A in Art and Design, June 2020
-        </h4>
+          <h4 class="header-4 pb-2">
+            B.F.A in Art and Design, June 2020
+          </h4>
 
 
-        <p class="body-1">
-          Concentration in Graphic Design
-        </p>
+          <p class="body-1">
+            Concentration in Graphic Design
+          </p>
 
 
-        <p class="body-1">
-          California Polytechnic State University, <br>San Luis Obispo
-        </p>
+          <p class="body-1">
+            California Polytechnic State University, <br>San Luis Obispo
+          </p>
+
+        </div>
 
 
       </div>
       <!--Resume Content Section End-->
 
       <!--Middle Padding Section Start-->
-      <div class="col-2">
+      <div class="col-1">
       </div>
       <!--Middle Padding Section End-->
 
@@ -167,24 +171,29 @@
       <!--Resume Content Section Start-->
       <div class="col-12 col-sm-5 py-3">
 
-        <h3 class="header-3 pb-3">
-          Honors and Awards
-        </h3>
+        <div class="ps-0 ps-md-4">
+
+          <h3 class="header-3 pb-3">
+            Honors and Awards
+          </h3>
 
 
-        <p class="body-1">
-          Magna Cum Laude
-        </p>
+          <p class="body-1">
+            Magna Cum Laude
+          </p>
 
 
-        <p class="body-1">
-          Dean’s List Fall 2016—Spring 2020
-        </p>
+          <p class="body-1">
+            Dean’s List Fall 2016—Spring 2020
+          </p>
 
 
-        <p class="body-1">
-          Adobe IBM iX Creative Jam 2019 Winner
-        </p>
+          <p class="body-1">
+            Adobe IBM iX Creative Jam 2019 Winner
+          </p>
+
+
+        </div>
 
 
       </div>
@@ -209,56 +218,126 @@
     <div class="row">
 
       <!--Resume Content Section Start-->
-      <div class="col-12 col-md-5 py-3">
+      <div class="col-12 col-md-6 py-3">
 
-        <h4 class="header-4 pb-2">
-          Web/Graphic Designer, <a class="inline-link-2"
-            href="https://www.themusesdigital.com/" target="_blank">The Muses Digital</a>
-        </h4>
+        <div class="pe-0 pe-md-4">
 
-
-        <p class="body-2">
-          August 2021—Present
-        </p>
+          <h4 class="header-4 pb-2">
+            Web/Graphic Designer, <a class="inline-link-2"
+              href="https://www.themusesdigital.com/" target="_blank">The Muses
+              Digital</a>
+          </h4>
 
 
-        <p class="body-1">
-          Designed responsive websites for clients across a variety of industries. Created
-          company branding for clients. Collaborated with copywriters and marketing
-          strategists
-          to create digital content for websites, emails, ads, and social media. Presented
-          design concepts to clients.
-        </p>
+          <p class="body-2">
+            August 2021—Present
+          </p>
+
+
+          <p class="body-1">
+            Designed responsive websites for clients across a variety of industries.
+            Created
+            company branding for clients. Collaborated with copywriters and marketing
+            strategists
+            to create digital content for websites, emails, ads, and social media.
+            Presented
+            design concepts to clients.
+          </p>
+
+        </div>
+
+      </div>
+      <!--Resume Content Section End-->
+
+      <!--Resume Content Section Start-->
+      <div class="col-12 col-md-6 py-3">
+
+        <div class="ps-0 ps-md-4">
+
+          <h4 class="header-4 pb-1">
+            Co-Founder, Grove
+          </h4>
+
+
+          <p class="body-2">
+            February 2020—June 2021
+          </p>
+
+
+          <p class="body-1">
+            Created company branding. Designed and prototyped a digital product. Conducted
+            user interviews. Collaborated on start-up business development and problem
+            discovery. Worked with software development teams to plan features.
+          </p>
+
+        </div>
+
+      </div>
+      <!--Resume Content Section End-->
+
+
+    </div>
+    <!--2 Col Content Section End-->
+
+
+    <!--2 Col Content Section Start-->
+    <div class="row">
+
+      <!--Resume Content Section Start-->
+      <div class="col-12 col-md-6 py-3">
+
+        <div class="pe-0 pe-md-4">
+
+          <h4 class="header-4 pb-1">
+            Creative Director, <a class="inline-link-2"
+              href="https://www.calpolyracing.org/" target="_blank">Cal Poly Racing</a>
+          </h4>
+
+
+          <p class="body-2">
+            February 2019—June 2020
+          </p>
+
+
+          <p class="body-1">
+            Led a creative team of 3–6 students. Recruited and trained new team members.
+            Managed and distributed projects to other team members. Oversaw team brand and
+            website development. Worked with engineering teams to plan and execute
+            collaborative projects.
+          </p>
+
+
+        </div>
 
 
       </div>
       <!--Resume Content Section End-->
 
 
-      <!--Middle Padding Section Start-->
-      <div class="col-2">
-      </div>
-      <!--Middle Padding Section End-->
-
-
       <!--Resume Content Section Start-->
-      <div class="col-12 col-md-5 py-3">
+      <div class="col-12 col-md-6 py-3">
 
-        <h4 class="header-4 pb-1">
-          Co-Founder, Grove
-        </h4>
+        <div class="ps-0 ps-md-4">
+
+          <h4 class="header-4 pb-2">
+            Freelance Graphic Design Intern, <a class="inline-link-2"
+              href="https://www.fiveacresagency.com/" target="_blank">Five Acres
+              Agency</a>
+          </h4>
 
 
-        <p class="body-2">
-          February 2020—June 2021
-        </p>
+          <p class="body-2">
+            June 2019—October 2019
+          </p>
 
 
-        <p class="body-1">
-          Created company branding. Designed and prototyped a digital product. Conducted
-          user interviews. Collaborated on start-up business development and problem
-          discovery. Worked with software development teams to plan features.
-        </p>
+          <p class="body-1">
+            Planned and executed a cross-platform social media marketing strategy. Created
+            and edited a variety of client work including publications, presentations, and
+            social media content.
+          </p>
+
+        </div>
 
 
       </div>
@@ -273,119 +352,59 @@
     <div class="row">
 
       <!--Resume Content Section Start-->
-      <div class="col-12 col-md-5 py-3">
+      <div class="col-12 col-md-6 py-3">
 
-        <h4 class="header-4 pb-1">
-          Creative Director, <a class="inline-link-2"
-            href="https://www.calpolyracing.org/" target="_blank">Cal Poly Racing</a>
-        </h4>
+        <div class="pe-0 pe-md-4">
 
-
-        <p class="body-2">
-          February 2019—June 2020
-        </p>
+          <h4 class="header-4 pb-2">
+            Graphic Design Intern, XVELA
+          </h4>
 
 
-        <p class="body-1">
-          Led a creative team of 3–6 students. Recruited and trained new team members.
-          Managed and distributed projects to other team members. Oversaw team brand and
-          website development. Worked with engineering teams to plan and execute
-          collaborative projects.
-        </p>
+          <p class="body-2">
+            June 2018—September 2018
+          </p>
 
 
-      </div>
-      <!--Resume Content Section End-->
+          <p class="body-1">
+            Designed a custom icon library for use in marketing collateral and website
+            design. Created graphics for social media accounts. Provided feedback on
+            website
+            design. Attended and participated in weekly company and department meetings.
+          </p>
 
-
-      <!--Middle Padding Section Start-->
-      <div class="col-2">
-      </div>
-      <!--Middle Padding Section End-->
-
-
-      <!--Resume Content Section Start-->
-      <div class="col-12 col-md-5 py-3">
-
-        <h4 class="header-4 pb-2">
-          Freelance Graphic Design Intern, <a class="inline-link-2"
-            href="https://www.fiveacresagency.com/" target="_blank">Five Acres Agency</a>
-        </h4>
-
-
-        <p class="body-2">
-          June 2019—October 2019
-        </p>
-
-
-        <p class="body-1">
-          Planned and executed a cross-platform social media marketing strategy. Created
-          and edited a variety of client work including publications, presentations, and
-          social media content.
-        </p>
+        </div>
 
 
       </div>
       <!--Resume Content Section End-->
 
 
-    </div>
-    <!--2 Col Content Section End-->
-
-
-    <!--2 Col Content Section Start-->
-    <div class="row">
-
       <!--Resume Content Section Start-->
-      <div class="col-12 col-md-5 py-3">
+      <div class="col-12 col-md-6 py-3">
 
-        <h4 class="header-4 pb-2">
-          Graphic Design Intern, XVELA
-        </h4>
+        <div class="ps-0 ps-md-4">
 
-
-        <p class="body-2">
-          June 2018—September 2018
-        </p>
+          <h4 class="header-4 pb-2">
+            Graphic Design Lead, <a class="inline-link-2"
+              href="https://www.calpolyracing.org/" target="_blank">Cal Poly Racing</a>
+          </h4>
 
 
-        <p class="body-1">
-          Designed a custom icon library for use in marketing collateral and website
-          design. Created graphics for social media accounts. Provided feedback on
-          website
-          design. Attended and participated in weekly company and department meetings.
-        </p>
+          <p class="body-2">
+            February 2018—February 2019
+          </p>
 
 
-      </div>
-      <!--Resume Content Section End-->
+          <p class="body-1">
+            Designed promotional materials and apparel. Created presentations necessary
+            for
+            SAE competitions. Organized and led design meetings and workshops.
+            Photographed
+            team events for social media.
+          </p>
 
-
-      <!--Middle Padding Section Start-->
-      <div class="col-2">
-      </div>
-      <!--Middle Padding Section End-->
-
-
-      <!--Resume Content Section Start-->
-      <div class="col-12 col-md-5 py-3">
-
-        <h4 class="header-4 pb-2">
-          Graphic Design Lead, <a class="inline-link-2"
-            href="https://www.calpolyracing.org/" target="_blank">Cal Poly Racing</a>
-        </h4>
-
-
-        <p class="body-2">
-          February 2018—February 2019
-        </p>
-
-
-        <p class="body-1">
-          Designed promotional materials and apparel. Created presentations necessary for
-          SAE competitions. Organized and led design meetings and workshops. Photographed
-          team events for social media.
-        </p>
+        </div>
 
 
       </div>
