fixed a spelling error

--- a/xvela.html
+++ b/xvela.html
@@ -75,7 +75,7 @@
 
         <h1 class="header-1 pb-3">XVELA Icon Library</h1>
 
-        <p class="body-1">I designed a set icons for XVELA, a company that creates
+        <p class="body-1">I designed a set of icons for XVELA, a company that creates
           cloud-based collaborative tools for the maritime shipping industry.</p>
 
       </div>
