fixed another spelling error

--- a/calpolyracing.html
+++ b/calpolyracing.html
@@ -296,7 +296,8 @@
     <!--Text Section Start-->
     <div class="pt-full padded-text mx-auto">
 
-      <p class="body-3">For the 2019 season I worked with the Baja team to design livery
+      <p class="body-3">For the 2019 season I worked with the Baja team to design the
+        livery
         for the side body panels and front and back of the firewall.
       </p>
 
