fixed a typo on about page

--- a/about.html
+++ b/about.html
@@ -95,7 +95,7 @@
 
 
         <p class="body-1">
-          I got my degree from Cal Poly in San Luis Obispo and and moved to San Diego to
+          I got my degree from Cal Poly in San Luis Obispo and moved to San Diego to
           start my career. My focus is branding and identity design. I love that branding
           projects can involve a variety of components in different mediums that I can fit
           together like a puzzle.
